--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,16 +3,14 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Hero from '../components/Hero.astro';
 import About from '../components/About.astro';
 import PluginShowcase from '../components/PluginShowcase.astro';
-import Mission from '../components/Mission.astro';
 import WhyUs from '../components/WhyUs.astro';
 import Contact from '../components/Contact.astro';
 ---
 
-<BaseLayout title="Open WP Club - A Community for WordPress Open Source Enthusiasts">
+<BaseLayout title="Open WP Club - Free, Open-Source WordPress Software">
   <Hero />
   <About />
   <PluginShowcase />
-  <Mission />
   <WhyUs />
   <Contact />
 </BaseLayout>
