--- a/src/pages/plugins/[slug].astro
+++ b/src/pages/plugins/[slug].astro
@@ -57,7 +57,7 @@ const softwareSchema = {
       <nav class="flex text-sm text-gray-500">
         <a href="/" class="hover:text-blue-600 transition-colors">Home</a>
         <span class="mx-2">/</span>
-        <a href="/plugins" class="hover:text-blue-600 transition-colors">Plugins</a>
+        <a href="/plugins/" class="hover:text-blue-600 transition-colors">Plugins</a>
         <span class="mx-2">/</span>
         <span class="text-gray-900 font-medium">{name}</span>
       </nav>
